Remove OpenJFX SDK from repository; add .gitignore and README instructions